--- a/about.html
+++ b/about.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>About Viktoria</title>
+    <link rel="stylesheet" href="/style.css" />
+    <title>Junior Front-end developer Viktoria</title>
+    <meta
+      name="description"
+      content="Front-end developer based in Almere,the Netherlands"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">👩‍💻 V.Vasyutinskaya</a>
+        <a class="navbar-brand" href="#" alt="Info about Viktoria"
+          >👩‍💻 V.Vasyutinskaya</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +42,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html" alt="back to start"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="about.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/about.html"
+                alt="More info about my projects"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a class="nav-link" href="/about.html#contact" alt="contact me"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -57,22 +71,38 @@
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
       veniam
     </div>
-    <div class="container mt-5 ms-5">
+    <div class="container mt-5 ms-1">
       <div class="row about-paragraphs">
-        <div class="col-md-4">
-          <img src="images/yoga.png" class="img-fluid img-thumbnail mb-3" />
+        <div class="col-sm-4">
+          <img
+            src="/images/yoga.png"
+            class="img-fluid img-thumbnail mb-3"
+            title="My yoga project"
+          />
         </div>
-        <div class="col-md-4">
-          <img src="images/weather.png" class="img-fluid img-thumbnail mb-3" />
+        <div class="col-sm-4">
+          <img
+            src="/images/weather.png"
+            class="img-fluid img-thumbnail mb-3"
+            title="My weather project"
+          />
         </div>
-        <div class="col-md-4">
-          <img src="images/yogurt.png" class="img-fluid img-thumbnail mb-3" />
+        <div class="col-sm-4">
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid img-thumbnail mb-3"
+            title="My yogurt project"
+          />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:solovyanova.v@gmail.com" class="email-link">
+      <a
+        href="mailto:solovyanova.v@gmail.com"
+        class="email-link"
+        title="email me"
+      >
         solovyanova.v@gmail.com
       </a>
     </div>
