--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viktoria Vasyutinskaya</title>
-    <link rel="stylesheet" href="style.css" />
+     <meta name="description" content="Front-end developer based in Almere,the Netherlands">
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -40,14 +41,14 @@
     <h1>Viktoria</h1>
     <h3>🇳🇱 Front-end developer, based in The Netherlands</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="contact">Contact me</a>
+      <a href="/about.html" class="about-link" title="my projects">About me</a>
     </div>
     <br>
-    <div class="container-fluid me-5 ms-5 mb-5">
+    <div class="container-fluid me-5 ms-2 mb-5">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid img-thumbnail" />
+          <img src="/images/yoga.png" class="img-fluid img-thumbnail" title="My yoga project"/>
         </div>
         <div class="col-sm-6">
           <h2 class="text-start p-1 mt-3">Yoga APP</h2>
@@ -56,7 +57,7 @@
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum
           <br>
-          <button class="launch p-2 rounded border-0 shadow-lg mt-3">
+          <button class="launch p-2 rounded border-0 shadow-lg mt-3" title="see Yoga app">
             Launch Yoga APP
           </button>
         </div>
@@ -69,16 +70,16 @@
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum
           <br>
-          <button class="launch p-2 rounded border-0 shadow-lg mt-3 mb-3">
+          <button class="launch p-2 rounded border-0 shadow-lg mt-3 mb-3" title="see Weather app">
             Launch Weather APP
           </button>
         </div>
           <div class="col-sm-6">
-            <img src="images/weather.png" class="img-fluid img-thumbnail mt-3" />
+            <img src="/images/weather.png" class="img-fluid img-thumbnail mt-3" title="My weather project"/>
       </div>
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="images/yogurt.png" class="img-fluid img-thumbnail mb-3" />
+          <img src="/images/yogurt.png" class="img-fluid img-thumbnail mb-3" title="My yogurt project"/>
         </div>
         <div class="col-sm-6">
           <h2 class="text-start p-1">Yogurt APP</h2>
@@ -87,7 +88,7 @@
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum
           <br>
-          <button class="launch p-2 rounded border-0 shadow-lg mt-3 mb-3">
+          <button class="launch p-2 rounded border-0 shadow-lg mt-3 mb-3" title="see Yogurt app">
             Launch Yogurt APP
           </button>
         </div>
