added alt to img

--- a/about.html
+++ b/about.html
@@ -78,6 +78,7 @@
             src="/images/yoga.png"
             class="img-fluid img-thumbnail mb-3"
             title="My yoga project"
+            alt="yoga project"
           />
         </div>
         <div class="col-sm-4">
@@ -85,6 +86,7 @@
             src="/images/weather.png"
             class="img-fluid img-thumbnail mb-3"
             title="My weather project"
+            alt="weather project"
           />
         </div>
         <div class="col-sm-4">
@@ -92,6 +94,7 @@
             src="/images/yogurt.png"
             class="img-fluid img-thumbnail mb-3"
             title="My yogurt project"
+            alt="yogurt project"
           />
         </div>
       </div>
