--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container-fluid me-5 ms-2 mb-5">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/yoga.png" class="img-fluid img-thumbnail" title="My yoga project"/>
+          <img src="/images/yoga.png" class="img-fluid img-thumbnail" title="My yoga project" alt="yoga project"/>
         </div>
         <div class="col-sm-6">
           <h2 class="text-start p-1 mt-3">Yoga APP</h2>
@@ -75,11 +75,11 @@
           </button>
         </div>
           <div class="col-sm-6">
-            <img src="/images/weather.png" class="img-fluid img-thumbnail mt-3" title="My weather project"/>
+            <img src="/images/weather.png" class="img-fluid img-thumbnail mt-3" title="My weather project" alt="weather project"/>
       </div>
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="/images/yogurt.png" class="img-fluid img-thumbnail mb-3" title="My yogurt project"/>
+          <img src="/images/yogurt.png" class="img-fluid img-thumbnail mb-3" title="My yogurt project" alt="yogurt project"/>
         </div>
         <div class="col-sm-6">
           <h2 class="text-start p-1">Yogurt APP</h2>
